--- a/appsettings.json
+++ b/appsettings.json
@@ -19,5 +19,12 @@
   "radishCache": "10.50.250.21:6379",
   //"TicketAttchment": "D:\\Project\\EasyRewards_Ticketing\\API\\Ticketing\\Easyrewardz_TicketSystem.WebAPI\\TicketAttchment"
   //"TicketAttchment": "//var//www//Ticketing//TicketAttchment"
-  "TicketAttachment": "TicketAttachment"
+  "TicketAttachment": "TicketAttachment",
+"Kestrel": {
+"EndPoints": {
+"Http": {
+"Url": "http://0.0.0.0:44357"
+}
+}
+}
 }
